--- a/index.html
+++ b/index.html
@@ -306,47 +306,72 @@ textarea.finput{resize:vertical;min-height:80px;line-height:1.5;}
   .modal{max-height:90vh;padding:20px 12px;}
   .modal-body{padding:16px;}
 
-  /* ── HEADER LAYOUT OPTIMIZATION FOR MOBILE ── */
-  /* Left align logo, align buttons to right */
-  header{justify-content:flex-start;}
-  .logo{flex:1 1 auto;margin:0;}
-  .hdr-right{flex:1 1 auto;justify-content:flex-end;margin:0;gap:8px;}
+  /* ── MOBILE HEADER LAYOUT REDESIGN ── */
+  /* Centered logo with buttons moved to map controls area */
+  header{
+    flex-direction:column;
+    align-items:center;
+    padding:8px 0;
+    gap:0;
+    min-height:auto;
+    height:auto;
+  }
+  .logo{
+    flex:0 1 auto;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:0;
+    margin:0;
+  }
+  .logo-icon{
+    width:36px;
+    height:36px;
+    margin-bottom:4px;
+  }
+  .logo-text{
+    font-size:16px;
+    text-align:center;
+  }
+  .logo-sub{
+    font-size:8px;
+    text-align:center;
+    margin-top:2px;
+  }
+  .hdr-right{
+    display:none !important;
+  }
   .stat-pill{display:none !important;}
 
-  /* ── MOBILE BUTTON TEXT HIDING ── */
-  /* Hide "Log Incident" text, show only + button */
-  .hdr-right .btn-primary{
-    width:44px;
-    height:44px;
-    padding:0;
-    min-width:44px;
-    min-height:44px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:24px;
-    overflow:hidden;
-    text-indent:-9999px;
-  }
-  .hdr-right .btn-primary::before{
-    content:'+';
-    text-indent:0;
-    position:absolute;
-  }
+  /* ── MAP CONTROLS MOBILE REORGANIZATION ── */
+  /* Move header buttons to map controls area */
+  .map-top-left{display:flex;flex-direction:column;gap:3px;}
+  .map-top-left .map-btn{font-size:0;width:44px;height:44px;padding:0;display:flex;align-items:center;justify-content:center;}
+  .map-top-left .map-btn::before{font-size:20px;content:'☰';}
 
-  /* ── ALIGN HEADER BUTTONS ── */
-  /* Make Login, Light mode, and + buttons same height and aligned right */
-  .hdr-right .btn-ghost,.hdr-right .btn-icon,.hdr-right .btn-primary{
-    height:44px;
+  .map-top-right{display:flex;flex-direction:column;gap:3px;align-items:flex-end;}
+
+  /* Add mobile-specific button styling for header buttons in controls */
+  .mobile-header-controls{display:flex;flex-direction:column;gap:3px;}
+  .mobile-login-btn,.mobile-new-entry-btn,.mobile-theme-btn{
     width:44px;
-    min-height:44px;
-    min-width:44px;
+    height:44px;
     padding:0;
     display:flex;
     align-items:center;
     justify-content:center;
-    font-size:14px;
+    font-size:18px;
+    border:1px solid var(--border);
+    background:var(--surface2);
+    border-radius:var(--r);
+    cursor:pointer;
+    color:var(--text-muted);
+    transition:all .15s;
     flex-shrink:0;
+  }
+  .mobile-login-btn:hover,.mobile-new-entry-btn:hover,.mobile-theme-btn:hover{
+    border-color:var(--accent);
+    color:var(--accent);
   }
 
   /* ── SWIPE-ENABLED PANELS ── */
@@ -487,7 +512,12 @@ textarea.finput{resize:vertical;min-height:80px;line-height:1.5;}
     <div id="logPrompt" class="log-prompt" style="display:none"></div>
     <div id="dragPin" style="display:none"><div class="drag-pin" id="dragPinHead"></div></div>
     <div class="map-top-left">
-      <button class="map-btn" onclick="toggleSidebar()">☰ PANEL</button>
+      <button class="map-btn" id="btnToggleSidebar" onclick="toggleSidebar()">☰ PANEL</button>
+      <div id="mobileHeaderControls" class="mobile-header-controls" style="display:none;">
+        <button class="mobile-login-btn" onclick="handleLogin()" title="Login">🔓</button>
+        <button class="mobile-new-entry-btn" onclick="openReport(null,null,null)" title="New Entry">➕</button>
+        <button class="mobile-theme-btn" onclick="toggleTheme()" title="Toggle dark/light mode">🌙</button>
+      </div>
     </div>
     <div class="map-top-right">
       <button class="map-btn on" id="btnHeat" onclick="toggleHeat()">🌡 HEATMAP ON</button>
@@ -1072,10 +1102,11 @@ mapC.addEventListener('touchmove',e=>{
 },{passive:false});
 mapC.addEventListener('touchend',()=>{t0=null;});
 
-// Mobile pinch-to-zoom gesture support
+// Mobile pinch-to-zoom gesture support (prevents browser zoom)
 let pinchDistance=0;
 mapC.addEventListener('touchmove',e=>{
   if(e.touches.length===2){
+    e.preventDefault(); // Prevent browser's default pinch-to-zoom
     markUserInteraction();
     const dx=e.touches[0].clientX-e.touches[1].clientX;
     const dy=e.touches[0].clientY-e.touches[1].clientY;
@@ -1154,6 +1185,35 @@ if(isTouch()){
       sidebar.classList.remove('mob-open');
     }
   },{passive:true});
+
+  // Show mobile header controls (Login, New Entry, Theme) in map controls area
+  const mobileControls=document.getElementById('mobileHeaderControls');
+  if(mobileControls){
+    mobileControls.style.display='flex';
+  }
+
+  // Hide header buttons on mobile and adjust sidebar button text
+  const hdrRight=document.querySelector('.hdr-right');
+  if(hdrRight){
+    hdrRight.style.display='none';
+  }
+
+  // Update sidebar button to show only hamburger on mobile
+  const toggleBtn=document.getElementById('btnToggleSidebar');
+  if(toggleBtn){
+    toggleBtn.textContent='☰';
+    toggleBtn.style.font='0';
+  }
+
+  // Improve pinch zoom to prevent browser zoom on map container
+  mapC.addEventListener('gesturestart',e=>{
+    e.preventDefault();
+  });
+  mapC.addEventListener('wheel',e=>{
+    if(e.ctrlKey||e.metaKey){
+      e.preventDefault();
+    }
+  },{passive:false});
 }
 let lastTouchTime=0;
 
