Fix: Remove inline display:none from CSV tab to allow CSS class-based visibility toggle

--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@ textarea.finput{resize:vertical;min-height:80px;line-height:1.5;}
           <div id="jsonPreviewContent"></div>
         </div>
       </div>
-      <div id="csvTab" class="import-content" style="display:none;">
+      <div id="csvTab" class="import-content">
         <input type="file" id="csvFileInput" accept=".csv" onchange="handleCsvFile(this.files[0])" style="margin-bottom:12px;">
         <div id="csvPreview" style="display:none;margin-top:12px;padding:12px;background:var(--surface);border-radius:var(--r);max-height:300px;overflow-y:auto;font-size:11px;">
           <div style="color:var(--text-muted);margin-bottom:8px;" id="csvStatus"></div>
