--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ textarea.finput{resize:vertical;min-height:80px;line-height:1.5;}
         <div class="fsec-title">⚡ Injury & Method</div>
         <div class="frow">
           <div class="fgrp"><label>METHOD</label><select id="fMethod2" class="finput"><option>Blunt Trauma</option><option>Sharp Force</option><option>Strangulation</option><option>Poisoning</option><option>Decapitation</option><option>Roadkill</option><option>Accident</option><option>Other / Unknown</option></select></div>
-          <div class="fgrp"><label>SEVERITY</label><select id="fSeverity" class="finput"><option>Fatal</option><option>Critical</option><option>Injured — Survived</option><option>Suspected</option></select></div>
+          <div class="fgrp"><label>SEVERITY</label><select id="fSeverity" class="finput"><option>Fatal</option><option>Critical</option><option>Injured — Survived</option></select></div>
         </div>
         <div class="fgrp"><label>NOTES</label><textarea id="fNotes" class="finput" placeholder="Scene description, observations…"></textarea></div>
       </div>
